--- a/Tensor.ipynb
+++ b/Tensor.ipynb
@@ -189,6 +189,85 @@
     "Hasil_Data = pd.DataFrame(Variable_A)\n",
     "Hasil_Data"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Buah = {\n",
+    "    \"buah_pertama\" : ['Apple','Anggur','Cherry'],\n",
+    "    \"buah_kedua\" : [\"Blueberry\", \"Durian\", \"Kapulaga\"]\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>buah_pertama</th>\n",
+       "      <th>buah_kedua</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Apple</td>\n",
+       "      <td>Blueberry</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Anggur</td>\n",
+       "      <td>Durian</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Cherry</td>\n",
+       "      <td>Kapulaga</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  buah_pertama buah_kedua\n",
+       "0        Apple  Blueberry\n",
+       "1       Anggur     Durian\n",
+       "2       Cherry   Kapulaga"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Buah_Frame = pd.DataFrame(Buah)\n",
+    "Buah_Frame"
+   ]
   }
  ],
  "metadata": {
