--- a/Tensor.ipynb
+++ b/Tensor.ipynb
@@ -424,6 +424,163 @@
     "Gabungan = pd.concat(Gabungan)\n",
     "Gabungan"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tensorflow as tf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tf.Tensor(\n",
+      "[[1. 1. 1. 1. 1. 1. 1. 1. 1. 1.]\n",
+      " [1. 1. 1. 1. 1. 1. 1. 1. 1. 1.]\n",
+      " [1. 1. 1. 1. 1. 1. 1. 1. 1. 1.]\n",
+      " [1. 1. 1. 1. 1. 1. 1. 1. 1. 1.]\n",
+      " [1. 1. 1. 1. 1. 1. 1. 1. 1. 1.]\n",
+      " [1. 1. 1. 1. 1. 1. 1. 1. 1. 1.]\n",
+      " [1. 1. 1. 1. 1. 1. 1. 1. 1. 1.]\n",
+      " [1. 1. 1. 1. 1. 1. 1. 1. 1. 1.]\n",
+      " [1. 1. 1. 1. 1. 1. 1. 1. 1. 1.]\n",
+      " [1. 1. 1. 1. 1. 1. 1. 1. 1. 1.]], shape=(10, 10), dtype=float32)\n"
+     ]
+    }
+   ],
+   "source": [
+    "Jumlah = tf.ones([10,10])\n",
+    "print(Jumlah)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tf.Tensor(\n",
+      "[[19.644758 17.502335 16.486982 19.073675 15.493136]\n",
+      " [15.119223 17.529871 15.389586 18.015015 16.795189]\n",
+      " [15.397329 18.280024 17.93293  17.781937 15.563813]\n",
+      " [17.910244 17.904602 17.55832  16.541443 15.524832]\n",
+      " [16.938    19.173826 19.885305 16.64646  15.632371]], shape=(5, 5), dtype=float32)\n"
+     ]
+    }
+   ],
+   "source": [
+    "Angka = tf.random.uniform([5,5],minval=15,maxval=20)\n",
+    "print(Angka)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tf.Tensor(\n",
+      "[[5. 5. 5. 5. 5. 5. 5. 5. 5. 5.]\n",
+      " [5. 5. 5. 5. 5. 5. 5. 5. 5. 5.]\n",
+      " [5. 5. 5. 5. 5. 5. 5. 5. 5. 5.]\n",
+      " [5. 5. 5. 5. 5. 5. 5. 5. 5. 5.]\n",
+      " [5. 5. 5. 5. 5. 5. 5. 5. 5. 5.]\n",
+      " [5. 5. 5. 5. 5. 5. 5. 5. 5. 5.]\n",
+      " [5. 5. 5. 5. 5. 5. 5. 5. 5. 5.]\n",
+      " [5. 5. 5. 5. 5. 5. 5. 5. 5. 5.]\n",
+      " [5. 5. 5. 5. 5. 5. 5. 5. 5. 5.]\n",
+      " [5. 5. 5. 5. 5. 5. 5. 5. 5. 5.]], shape=(10, 10), dtype=float32)\n"
+     ]
+    }
+   ],
+   "source": [
+    "Tensor = tf.math.multiply(Jumlah,5)\n",
+    "print(Tensor)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 4.2290115 ,  9.17776   ,  7.2247095 , 16.25836   ,  3.9540462 ,\n",
+       "         7.2467136 , 19.193092  , 14.494022  ,  5.4826517 , 15.422998  ],\n",
+       "       [ 6.6463947 ,  8.208944  ,  7.2200956 ,  7.6109304 ,  2.2867024 ,\n",
+       "         2.4765172 ,  1.5100417 , 19.83197   ,  0.58322465, 13.688443  ],\n",
+       "       [ 5.3876605 , 13.3860855 , 18.993765  , 12.6686945 ,  9.282696  ,\n",
+       "        12.503606  ,  9.567929  ,  6.787063  ,  9.533276  , 12.800531  ],\n",
+       "       [ 7.90154   , 12.5205965 , 13.909042  , 16.96493   ,  1.2566781 ,\n",
+       "         1.7354221 , 14.57093   , 15.468687  ,  2.4299593 ,  2.905006  ],\n",
+       "       [ 8.965278  , 12.834835  , 19.385319  , 12.174019  ,  7.4044027 ,\n",
+       "        19.314844  ,  1.8263307 , 12.764905  ,  7.5192213 ,  2.7897873 ],\n",
+       "       [10.8218975 ,  5.9896593 , 11.162165  , -0.3248093 ,  0.951051  ,\n",
+       "         5.390787  , 12.982238  , -0.70760846,  8.292732  ,  5.071464  ],\n",
+       "       [15.271526  , 12.1716    , 11.859831  ,  0.9240719 , 15.1478195 ,\n",
+       "         4.321392  ,  2.1520398 ,  2.8608484 , 14.799196  , 11.569216  ],\n",
+       "       [14.478267  ,  7.47972   ,  2.19279   ,  2.8413446 ,  2.8781445 ,\n",
+       "         0.54694295, 10.159054  ,  2.3618643 , 11.752635  ,  7.7305727 ],\n",
+       "       [10.456613  ,  5.4603662 , 13.056887  ,  7.886136  , 18.457266  ,\n",
+       "         5.4816256 ,  0.99930143, 13.060719  ,  1.3687801 ,  5.2071958 ],\n",
+       "       [19.697027  , 12.766029  , 10.896927  ,  9.788587  , -0.80265737,\n",
+       "        15.04689   , 13.424587  ,  4.8728223 ,  1.1106374 , 11.497021  ]],\n",
+       "      dtype=float32)"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Tensor.numpy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[20., 20., 20., 20., 20., 20., 20., 20., 20., 20.],\n",
+       "       [20., 20., 20., 20., 20., 20., 20., 20., 20., 20.],\n",
+       "       [20., 20., 20., 20., 20., 20., 20., 20., 20., 20.],\n",
+       "       [20., 20., 20., 20., 20., 20., 20., 20., 20., 20.],\n",
+       "       [20., 20., 20., 20., 20., 20., 20., 20., 20., 20.],\n",
+       "       [20., 20., 20., 20., 20., 20., 20., 20., 20., 20.],\n",
+       "       [20., 20., 20., 20., 20., 20., 20., 20., 20., 20.],\n",
+       "       [20., 20., 20., 20., 20., 20., 20., 20., 20., 20.],\n",
+       "       [20., 20., 20., 20., 20., 20., 20., 20., 20., 20.],\n",
+       "       [20., 20., 20., 20., 20., 20., 20., 20., 20., 20.]], dtype=float32)"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Tensor.numpy()"
+   ]
   }
  ],
  "metadata": {
